2011-07-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #27736: fixed MM-query getting fe_groups recursively. Check empty array.
	
2011-07-07 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #27736: SQL-Error "WHERE () AND" in tx_directmail_static
	* Task #26696: Remove tx_directmail_cron.lock
	* Bug #26698: Optimization of logging

2011-07-06 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature #25466: Added feature to send newsletter to multiple lists.

2011-06-13 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #13086: Tables needs to use the sorting field

2011-06-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #26791: sending external URL was faild. bug in fetching process
	* Feature #26729: use img title as title in statistic, if there's any

2011-05-10 Jacob Rasmussen <jacob@lightbulb.dk>
	* Bug #9787: Wrong permissions for tx_directmail_dmailer_log.txt

2011-05-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #7152: Fix importer for non admin user
	* Updated documentation
	* Bug #26392: SQL compatibility

2011-03-24 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #13124: depreciation log messages with typo 4.5

2011-03-25  Benjamin Mack  <benni@typo3.org>
	* Added new feature: Create Direct Mail "drafts" that can be used as templates for new Direct Mails
	* Added new feature: Create a scheduler task to create new Direct Mails out of Direct Mail Drafts
	* Made all modules templateable
	* Updated look+feel of all modules to fit 4.4 styles
	* Made use of message boxes of TYPO3 to display error messages or warning messages the right way
	
2011-03-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* release 2.6.10 (typo3-sa-2011-002)
	
2011-01-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* release 2.6.9
	
2010-12-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Update documentation

2010-12-8 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #5864: Recursive FE groups (thanks to Stephan Grossberndt)

2010-10-31 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #10166: TCA Icon using SpriteManager if 4.4.x is installed