@@ -1,3 +1,6 @@
+2011-07-08 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Feature #11010: add categories during import, instead overwriting existing one.
+	
 2011-07-07 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Bug #27736: fixed MM-query getting fe_groups recursively. Check empty array.
 	
